// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<S /> should bold text when specified 1`] = `
<S
  type="bold"
>
  <Styled(span)
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="bold"
  >
    <span
      className="css-1l65439-StyledS e1e5cw540"
      type="bold"
    >
      You should read this!
    </span>
  </StyledS>
</S>
`;

exports[`<S /> should italicize text when specified 1`] = `
<S
  type="italic"
>
  <Styled(span)
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="italic"
  >
    <span
      className="css-vpjcch-StyledS e1e5cw540"
      type="italic"
    >
      This text is italicized!
    </span>
  </StyledS>
</S>
`;

exports[`<S /> should underline text when specified 1`] = `
<S
  type="strikethrough"
>
  <Styled(span)
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="strikethrough"
  >
    <span
      className="css-os5y7u-StyledS e1e5cw540"
      type="strikethrough"
    >
      Don’t read this!
    </span>
  </StyledS>
</S>
`;

exports[`<S /> should underline text when specified 2`] = `
<S
  type="underline"
>
  <Styled(span)
    styles={
      Object {
        "base": Object {},
        "context": Object {
          "color": "#ff0",
        },
        "user": undefined,
      }
    }
    type="underline"
  >
    <span
      className="css-1yijsn5-StyledS e1e5cw540"
      type="underline"
    >
      This text is underlined!
    </span>
  </StyledS>
</S>
`;
